--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@ pubspec.lock
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
 doc/api/
+
+# flutter root folder wrongly created
+/ios
+/android
+
+# IDE
+.idea/
+*.iml
+.vscode/
