--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dart:
   - stable
   - dev
 before_script:
-  - dart tool/travis_flutter_install.dart
-  - source $(dart tool/travis_flutter_env.dart)
+  - pub run tekartik_travis_ci_flutter:install
+  - source $(pub run tekartik_travis_ci_flutter:env)
 script:
   - dart tool/travis.dart
