--- a/test_app/pubspec.yaml
+++ b/test_app/pubspec.yaml
@@ -24,7 +24,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   tekartik_app_flutter_plugin:
-    path: ../app_plugin
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2
+      path: app_plugin
+    version: '>=0.1.0'
   tekartik_test_menu_flutter:
     git:
       url: git://github.com/tekartik/test_menu_flutter
@@ -78,3 +82,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+dependency_overrides:
+  tekartik_app_flutter_plugin:
+    path: ../app_plugin
