--- a/test_app/pubspec.yaml
+++ b/test_app/pubspec.yaml
@@ -86,3 +86,7 @@ flutter:
 dependency_overrides:
   tekartik_app_flutter_plugin:
     path: ../app_plugin
+  tekartik_app_flutter_idb:
+    path: ../app_idb
+  tekartik_app_flutter_firebase:
+    path: ../app_firebase
