--- a/test_app/android/app/build.gradle
+++ b/test_app/android/app/build.gradle
@@ -53,6 +53,11 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    // Temporary fix until alpha10
+    packagingOptions {
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
 }
 
 flutter {
