--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://www.example.com
 author: alex <alex@tekartik.com>
 
 environment:
-  sdk: '>=2.1.0-dev <3.0.0'
+  sdk: '>=2.4.0 <3.0.0'
 
 dev_dependencies:
   tekartik_travis_ci_flutter:
