feat: ignore failure on dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ before_script:
   - source $(pub run tekartik_travis_ci_flutter:env)
 script:
   - dart tool/travis.dart
+matrix:
+  allow_failures:
+    - dart: dev
