--- a/app_firebase_auth/pubspec.yaml
+++ b/app_firebase_auth/pubspec.yaml
@@ -1,5 +1,5 @@
-name: tekartik_app_flutter_firebase
-description: Firebase for flutter application
+name: tekartik_app_flutter_firebase_auth
+description: Firebase auth for flutter application
 version: 0.1.0
 author:
 homepage:
@@ -10,18 +10,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  tekartik_firebase_browser:
+  tekartik_app_flutter_firebase:
     git:
-      url: git://github.com/tekartik/firebase.dart
-      path: firebase_browser
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      path: app_firebase
       ref: dart2
-    version: '>=0.4.0'
-  tekartik_firebase_flutter:
+  tekartik_firebase_auth_browser:
     git:
-      url: git://github.com/tekartik/firebase.dart
-      path: firebase_flutter
+      url: git://github.com/tekartik/firebase_auth.dart
+      path: auth_browser
       ref: dart2
-    version: '>=0.4.0'
+    version: '>=0.7.0'
+  tekartik_firebase_auth_flutter:
+    git:
+      url: git://github.com/tekartik/firebase_auth.dart
+      path: auth_flutter
+      ref: dart2
+    version: '>=0.7.0'
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,3 +67,7 @@ flutter:
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/custom-fonts/#from-packages
+
+dependency_overrides:
+  tekartik_app_flutter_firebase:
+    path: ../app_firebase
