--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,14 @@ dev_dependencies:
       url: git://github.com/tekartik/travis_ci_flutter.dart
       ref: dart2
     version: '>=0.1.0'
-  process_run: '>=0.10.0'
-# include all from git so that it makes a dependency check
+  process_run: '>=0.10.3'
+  tekartik_build_utils:
+    git:
+      url: git://github.com/tekartik/build_utils.dart
+      ref: dart2
+    version: '>=0.7.5'
+
+  # include all from git so that it makes a dependency check
   tekartik_app_emit:
     git:
       url: git://github.com/tekartik/app_common_utils.dart
