--- a/test_app/analysis_options.yaml
+++ b/test_app/analysis_options.yaml
@@ -21,7 +21,8 @@ analyzer:
     missing_return: warning
     # allow having TODOs in the code
     todo: ignore
-
+  exclude:
+    - lib/generated_plugin_registrant.dart
 linter:
   rules:
     # these rules are documented on and in the same order as
