--- a/app_platform/pubspec.yaml
+++ b/app_platform/pubspec.yaml
@@ -1,54 +1,34 @@
-name: tekartik_prefs_test_app_lib
-description: Test app lib
-version: 0.0.1
+name: tekartik_app_platform
+description: Platform helper
+version: 0.1.0
 author:
 homepage:
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.7.0-dev <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  tekartik_test_menu_flutter:
-    git:
-      url: git://github.com/tekartik/test_menu_flutter
-      ref: dart2
-      path: test_menu_flutter
-    version: '>=0.2.3'
-  tekartik_common_utils:
-    git:
-      url: git://github.com/tekartik/common_utils.dart
-      ref: dart2
-    version: '>=0.2.3'
-  tekartik_app_prefs:
-    git:
-      url: git://github.com/tekartik/app_flutter_utils.dart
-      ref: dart2
-      path: app_prefs
-    version: '>=0.1.0'
-  tekartik_app_platform:
-    git:
-      url: git://github.com/tekartik/app_flutter_utils.dart
-      ref: dart2
-      path: app_platform
-    version: '>=0.1.0'
+  path:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  process_run:
 
 dependency_overrides:
-  tekartik_app_prefs:
-    path: ../../app_prefs
-  tekartik_app_platform:
-    path: ../../app_platform
   pedantic: '>=1.9.0'
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
+
+# The following section is specific to Flutter.
 flutter:
 
   # To add assets to your package, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  #  - images/a_dot_burr.jpeg
+  #  - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
