--- a/example/test_app/pubspec.yaml
+++ b/example/test_app/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   tekartik_prefs_test_app_lib:
     path: ../prefs_test_app_lib
+  tekartik_idb_test_app_lib:
+    path: ../idb_test_app_lib
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +37,8 @@ dependency_overrides:
     path: ../../app_prefs
   tekartik_app_platform:
     path: ../../app_platform
+  tekartik_app_flutter_idb:
+    path: ../../app_idb
   pedantic: '>=1.9.0'
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
