--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,12 @@ dev_dependencies:
       url: git://github.com/tekartik/app_common_utils.dart
       ref: dart2
       path: app_emit
+  tekartik_app_roboto:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2
+      path: app_roboto
+      version: '>=0.1.0'
   test:
 
 dependency_overrides:
