--- a/test_app/pubspec.yaml
+++ b/test_app/pubspec.yaml
@@ -53,6 +53,12 @@ dependencies:
       ref: dart2
       path: app_firebase_firestore
     version: '>=0.1.0'
+  tekartik_app_roboto:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2
+      path: app_roboto
+      version: '>=0.1.0'
   process_run: '>=0.10.1'
   pub_semver:
 dev_dependencies:
@@ -111,3 +117,5 @@ dependency_overrides:
     path: ../app_fs
   tekartik_app_flutter_firebase:
     path: ../app_firebase
+  tekartik_app_roboto:
+    path: ../app_roboto
