--- a/example/sembast_test_app_lib/pubspec.yaml
+++ b/example/sembast_test_app_lib/pubspec.yaml
@@ -1,35 +1,54 @@
-name: tekartik_app_flutter_sembast
-description: Sembast for flutter (Web, Mobile & Desktop)
-version: 0.2.0
+name: tekartik_sembast_test_app_lib
+description: Sembast test app lib
+version: 0.0.1
 author:
 homepage:
 
 environment:
-  sdk: ">=2.4.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  sembast: '>=1.2.1'
-  sembast_web: '>=0.1.0+4'
-  process_run:
-  path_provider:
-  path:
-
+  tekartik_test_menu_flutter:
+    git:
+      url: git://github.com/tekartik/test_menu_flutter
+      ref: dart2
+      path: test_menu_flutter
+    version: '>=0.2.3'
+  tekartik_common_utils:
+    git:
+      url: git://github.com/tekartik/common_utils.dart
+      ref: dart2
+    version: '>=0.2.3'
+  tekartik_app_flutter_sembast:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2
+      path: app_sembast
+    version: '>=0.1.0'
+  tekartik_app_platform:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2
+      path: app_platform
+    version: '>=0.1.0'
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
+dependency_overrides:
+  tekartik_app_flutter_sembast:
+    path: ../../app_sembast
+  tekartik_app_platform:
+    path: ../../app_platform
+  pedantic: '>=1.9.0'
 flutter:
 
   # To add assets to your package, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
