--- a/app_emit_builder/pubspec.yaml
+++ b/app_emit_builder/pubspec.yaml
@@ -22,6 +22,9 @@ dev_dependencies:
     sdk: flutter
   process_run:
 
+dependency_overrides:
+  pedantic: '>=1.9.0'
+
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
