--- a/app_firebase/pubspec.yaml
+++ b/app_firebase/pubspec.yaml
@@ -26,6 +26,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   process_run: '>=0.10.3'
+
+dependency_overrides:
+  pedantic: '>=1.9.0'
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
