--- a/app_firebase_auth/pubspec.yaml
+++ b/app_firebase_auth/pubspec.yaml
@@ -31,6 +31,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   process_run: '>=0.10.3'
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -69,5 +70,6 @@ flutter:
   # https://flutter.dev/custom-fonts/#from-packages
 
 dependency_overrides:
+  pedantic: '>=1.9.0'
   tekartik_app_flutter_firebase:
     path: ../app_firebase
