--- a/app_roboto/pubspec.yaml
+++ b/app_roboto/pubspec.yaml
@@ -16,6 +16,9 @@ dev_dependencies:
     sdk: flutter
   process_run:
 
+dependency_overrides:
+  pedantic: '>=1.9.0'
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
