--- a/test_app/.gitignore
+++ b/test_app/.gitignore
@@ -69,3 +69,11 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# projects
+/android/
+/ios/
+/macos/
+/windows/
+/linux/
+/web/
