--- a/app_sqflite/pubspec.yaml
+++ b/app_sqflite/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tekartik_app_flutter_sqflite
-description: A new Flutter package project.
-version: 0.1.0
+description: Sqflite common initialization for flutter
+version: 0.2.0
 author:
 homepage:
 
