--- a/app_emit_builder/pubspec.yaml
+++ b/app_emit_builder/pubspec.yaml
@@ -1,8 +1,7 @@
 name: tekartik_app_emit_builder
 description: Emit builder
 version: 0.1.0
-author:
-homepage:
+publish_to: none
 
 environment:
   sdk: ">=2.1.0-dev <3.0.0"
