--- a/app_firebase/pubspec.yaml
+++ b/app_firebase/pubspec.yaml
@@ -1,8 +1,7 @@
 name: tekartik_app_flutter_firebase
 description: Firebase for flutter application
 version: 0.1.0
-author:
-homepage:
+publish_to: none
 
 environment:
   sdk: ">=2.7.0-dev <3.0.0"
