--- a/app_fs/pubspec.yaml
+++ b/app_fs/pubspec.yaml
@@ -1,8 +1,7 @@
 name: tekartik_app_flutter_fs
 description: Filesystem for Flutter app.
 version: 0.1.0
-author:
-homepage:
+publish_to: none
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
