--- a/app_platform/pubspec.yaml
+++ b/app_platform/pubspec.yaml
@@ -1,8 +1,7 @@
 name: tekartik_app_platform
 description: Platform helper
 version: 0.2.0
-author:
-homepage:
+publish_to: none
 
 environment:
   sdk: ">=2.7.0-dev <3.0.0"
