--- a/app_plugin/pubspec.yaml
+++ b/app_plugin/pubspec.yaml
@@ -1,8 +1,7 @@
 name: tekartik_app_flutter_plugin
 description: Flutter plugin with platform features 
 version: 0.1.0
-author:
-homepage:
+publish_to: none
 
 environment:
   sdk: ">=2.3.0-dev <3.0.0"
