--- a/app_prefs/pubspec.yaml
+++ b/app_prefs/pubspec.yaml
@@ -1,8 +1,7 @@
 name: tekartik_app_prefs
 description: Prefs helper
 version: 0.3.0
-author:
-homepage:
+publish_to: none
 
 environment:
   sdk: ">=2.5.0 <3.0.0"
