--- a/app_sembast/pubspec.yaml
+++ b/app_sembast/pubspec.yaml
@@ -1,8 +1,7 @@
 name: tekartik_app_flutter_sembast
 description: Sembast for flutter (Web, Mobile & Desktop)
-version: 0.4.0
-author:
-homepage:
+version: 0.4.1
+publish_to: none
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -21,7 +20,7 @@ dependencies:
       url: git://github.com/tekartik/app_flutter_utils.dart
       ref: dart2
       path: app_sqflite
-    version: '>=0.4.0'
+    version: '>=0.4.1'
 
 dev_dependencies:
   flutter_test:
