--- a/example/fs_test_app_lib/pubspec.yaml
+++ b/example/fs_test_app_lib/pubspec.yaml
@@ -1,8 +1,7 @@
 name: tekartik_fs_test_app_lib
 description: fs test app lib
 version: 0.0.1
-author:
-homepage:
+publish_to: none
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
