--- a/example/test_app/pubspec.yaml
+++ b/example/test_app/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tekartik_app_utils_test_app
-description: A new Flutter project.
-
+description: A test app.
+publish_to: none
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
