--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: tekartik_app_flutter_utils_repo
 description: Repo
 version: 0.1.0
-homepage: https://www.example.com
-author: alex <alex@tekartik.com>
+publish_to: none
 
 environment:
   sdk: '>=2.7.0-dev <3.0.0'
