--- a/test_app/pubspec.yaml
+++ b/test_app/pubspec.yaml
@@ -1,5 +1,6 @@
 name: tekartik_app_flutter_test_app
 description: Flutter test application.
+publish_to: none
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
