--- a/app_sembast/pubspec.yaml
+++ b/app_sembast/pubspec.yaml
@@ -1,17 +1,17 @@
 name: tekartik_app_flutter_sembast
 description: Sembast for flutter (Web, Mobile & Desktop)
-version: 0.4.1
+version: 0.4.2
 publish_to: none
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  sembast: '>=1.2.1'
-  sembast_web: '>=0.1.0+4'
-  sembast_sqflite:
+  sembast: '>=2.4.7+3'
+  sembast_web: '>=1.2.0'
+  sembast_sqflite: '>=1.0.0'
   process_run:
   path_provider:
   path:
