--- a/.github/workflows/run_ci.yml
+++ b/.github/workflows/run_ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     defaults:
       run:
-        working-directory: ./sqflite_support
+        working-directory: .
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
