--- a/app_navigator/pubspec.yaml
+++ b/app_navigator/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tekartik_app_navigator_flutter
 description: Experimental app navigator flutter
-version: 0.2.4
+version: 0.2.4+1
 author:
 homepage:
 publish_to: none
