--- a/app_sembast/pubspec.yaml
+++ b/app_sembast/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  pedantic:
 dependency_overrides:
 
   tekartik_app_flutter_sqflite:
