--- a/app_sqflite/pubspec.yaml
+++ b/app_sqflite/pubspec.yaml
@@ -1,23 +1,23 @@
 name: tekartik_app_flutter_sqflite
 description: Sqflite common initialization for flutter
-version: 0.4.1
+version: 0.5.0
 publish_to: none
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: '>=1.3.0-dev.1'
-  sqflite_common_ffi: '>=0.1.0-dev.1'
-  sqflite_common: '>=0.1.0-dev.3'
-  process_run:
+  sqflite: '>=2.0.0+1'
+  sqflite_common_ffi: '>=2.0.0'
+  sqflite_common: '>=2.0.0+1'
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic:
+  process_run:
 
 dependency_overrides:
 
