--- a/app_sembast/pubspec.yaml
+++ b/app_sembast/pubspec.yaml
@@ -1,18 +1,17 @@
 name: tekartik_app_flutter_sembast
 description: Sembast for flutter (Web, Mobile & Desktop)
-version: 0.4.2
+version: 0.5.0
 publish_to: none
 
 environment:
-  sdk: ">=2.8.0 <3.0.0"
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  sembast: '>=2.4.7+3'
-  sembast_web: '>=1.2.0'
-  sembast_sqflite: '>=1.0.0'
-  process_run:
+  sembast: '>=3.0.0+2'
+  sembast_web: '>=2.0.0'
+  sembast_sqflite: '>=2.0.0'
   path_provider:
   path:
   tekartik_app_flutter_sqflite:
@@ -20,12 +19,14 @@ dependencies:
       url: git://github.com/tekartik/app_flutter_utils.dart
       ref: dart2
       path: app_sqflite
-    version: '>=0.4.1'
+    version: '>=0.5.0'
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic:
+  process_run:
+
 dependency_overrides:
 
   tekartik_app_flutter_sqflite:
