--- a/app_roboto/pubspec.yaml
+++ b/app_roboto/pubspec.yaml
@@ -1,10 +1,10 @@
 name: tekartik_app_roboto
 description: Roboto fonts
-version: 0.1.0
+version: 0.2.0
 publish_to: none
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
   flutter:
