--- a/app_fs/pubspec.yaml
+++ b/app_fs/pubspec.yaml
@@ -1,10 +1,10 @@
 name: tekartik_app_flutter_fs
 description: Filesystem for Flutter app.
-version: 0.1.1
+version: 0.2.0
 publish_to: none
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
   flutter:
