--- a/app_plugin/pubspec.yaml
+++ b/app_plugin/pubspec.yaml
@@ -1,10 +1,10 @@
 name: tekartik_app_flutter_plugin
 description: Flutter plugin with platform features 
-version: 0.1.0
+version: 0.2.0
 publish_to: none
 
 environment:
-  sdk: ">=2.3.0-dev <3.0.0"
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
   flutter:
@@ -12,7 +12,7 @@ dependencies:
   tekartik_common_utils:
     git:
       url: git://github.com/tekartik/common_utils.dart
-      ref: dart2
+      ref: null_safety
     version: '>=0.10.5'
 
 dev_dependencies:
