--- a/app_prefs/pubspec.yaml
+++ b/app_prefs/pubspec.yaml
@@ -1,10 +1,10 @@
 name: tekartik_app_prefs
 description: Prefs helper
-version: 0.3.1
+version: 0.4.0
 publish_to: none
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -13,26 +13,27 @@ dependencies:
     git:
       url: git://github.com/tekartik/prefs.dart
       path: prefs_flutter
-      ref: dart2
+      ref: null_safety
     version: '>=0.1.0'
   tekartik_prefs_sembast:
     git:
       url: git://github.com/tekartik/prefs.dart
       path: prefs_sembast
-      ref: dart2
+      ref: null_safety
     version: '>=0.1.0'
   tekartik_prefs_browser:
     git:
       url: git://github.com/tekartik/prefs.dart
       path: prefs_browser
-      ref: dart2
+      ref: null_safety
     version: '>=0.1.0'
-  process_run:
   path:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  process_run:
+  dev_test:
 
 dependency_overrides:
 
