--- a/app_idb/pubspec.yaml
+++ b/app_idb/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tekartik_app_flutter_idb
 description: Setup idb for all platforms
-version: 0.4.0
+version: 0.4.1
 publish_to: none
 
 environment:
@@ -12,14 +12,24 @@ dependencies:
   idb_shim: '>=2.0.0+1'
   idb_sqflite: '>=1.0.0'
   sqflite: '>=2.0.0+1'
+  tekartik_app_flutter_sqflite:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2
+      path: app_sqflite
+    version: '>=0.5.0'
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  dev_test:
+  pedantic:
   process_run:
+  dev_test:
 
 dependency_overrides:
+  tekartik_app_flutter_sqflite:
+    path: ../app_sqflite
+
 
 
 # For information on the generic Dart part of this file, see the
