--- a/app_idb/pubspec.yaml
+++ b/app_idb/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   tekartik_app_flutter_sqflite:
     git:
       url: git://github.com/tekartik/app_flutter_utils.dart
-      ref: dart2
+      ref: null_safety
       path: app_sqflite
     version: '>=0.5.0'
 
