--- a/app_sembast/pubspec.yaml
+++ b/app_sembast/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tekartik_app_flutter_sembast
 description: Sembast for flutter (Web, Mobile & Desktop)
-version: 0.5.0
+version: 0.5.1
 publish_to: none
 
 environment:
@@ -17,7 +17,7 @@ dependencies:
   tekartik_app_flutter_sqflite:
     git:
       url: git://github.com/tekartik/app_flutter_utils.dart
-      ref: dart2
+      ref: null_safety
       path: app_sqflite
     version: '>=0.5.0'
 
