--- a/app_bloc/pubspec.yaml
+++ b/app_bloc/pubspec.yaml
@@ -1,10 +1,10 @@
 name: tekartik_app_flutter_bloc
 description: Basic bloc provider
-version: 0.2.2
+version: 0.3.0
 publish_to: none
 
 environment:
-  sdk: ">=2.8.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -12,7 +12,7 @@ dependencies:
   tekartik_app_bloc:
     git:
       url: git://github.com/tekartik/app_common_utils.dart
-      ref: dart2
+      ref: null_safety
       path: app_bloc
     version: '>=0.1.0'
 
