--- a/example/test_app/pubspec.yaml
+++ b/example/test_app/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   tekartik_test_menu_flutter:
     git:
       url: git://github.com/tekartik/test_menu_flutter
-      ref: dart2
+      ref: null_safety
       path: test_menu_flutter
     version: '>=0.2.3'
 dev_dependencies:
