--- a/test_app/pubspec.yaml
+++ b/test_app/pubspec.yaml
@@ -27,13 +27,13 @@ dependencies:
   tekartik_app_flutter_plugin:
     git:
       url: git://github.com/tekartik/app_flutter_utils.dart
-      ref: dart2
+      ref: null_safety
       path: app_plugin
     version: '>=0.1.0'
   tekartik_test_menu_flutter:
     git:
       url: git://github.com/tekartik/test_menu_flutter
-      ref: dart2
+      ref: null_safety
       path: test_menu_flutter
     version: '>=0.2.4'
   tekartik_app_flutter_firebase:
