--- a/app_firebase_firestore/pubspec.yaml
+++ b/app_firebase_firestore/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.1.0
 publish_to: none
 
 environment:
-  sdk: ">=2.7.0-dev <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -13,61 +13,24 @@ dependencies:
     git:
       url: git://github.com/tekartik/firebase_firestore.dart
       path: firestore_browser
-      ref: dart2
+      ref: null_safety
     version: '>=0.4.0'
   tekartik_firebase_firestore_flutter:
     git:
-      url: git://github.com/tekartik/firebase_firestore.dart
+      url: git://github.com/tekartik/firebase_flutter
       path: firestore_flutter
-      ref: dart2
+      ref: null_safety
     version: '>=0.4.0'
   tekartik_app_flutter_firebase:
     git:
       url: git://github.com/tekartik/app_flutter_utils.dart
       path: app_firebase
-      ref: dart2
+      ref: null_safety
 dev_dependencies:
   flutter_test:
     sdk: flutter
   process_run: '>=0.10.3'
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
-flutter:
-
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
 
 dependency_overrides:
-
   tekartik_app_flutter_firebase:
     path: ../app_firebase
