--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.2.0
 publish_to: none
 
 environment:
-  sdk: '>=2.10.0-0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dev_dependencies:
   path:
@@ -12,13 +12,13 @@ dev_dependencies:
   tekartik_travis_ci_flutter:
     git:
       url: git://github.com/tekartik/travis_ci_flutter.dart
-      ref: dart2
+      ref: null_safety
     version: '>=0.1.0'
   process_run: '>=0.10.3'
   tekartik_build_utils:
     git:
       url: git://github.com/tekartik/build_utils.dart
-      ref: dart2
+      ref: null_safety
     version: '>=0.7.8'
 
   test:
