--- a/app_rx_utils/pubspec.yaml
+++ b/app_rx_utils/pubspec.yaml
@@ -16,6 +16,12 @@ dev_dependencies:
     sdk: flutter
   process_run:
   pedantic:
+  tekartik_app_lints_flutter:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_lints
+    version: '>=0.1.0'
 
 dependency_overrides:
 
