--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -24,5 +24,10 @@ dev_dependencies:
   test:
   dev_test:
   pedantic:
-
+  tekartik_app_lints_flutter:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_lints
+    version: '>=0.1.0'
 
