--- a/app_firebase/pubspec.yaml
+++ b/app_firebase/pubspec.yaml
@@ -25,7 +25,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   process_run: '>=0.10.3'
-
+  tekartik_app_lints_flutter:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_lints
+    version: '>=0.1.0'
 dependency_overrides:
 
 
