--- a/app_idb/pubspec.yaml
+++ b/app_idb/pubspec.yaml
@@ -25,6 +25,12 @@ dev_dependencies:
   pedantic:
   process_run:
   dev_test:
+  tekartik_app_lints_flutter:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_lints
+    version: '>=0.1.0'
 
 dependency_overrides:
   tekartik_app_flutter_sqflite:
