--- a/app_platform/pubspec.yaml
+++ b/app_platform/pubspec.yaml
@@ -25,6 +25,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   process_run:
+  tekartik_app_lints_flutter:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_lints
+    version: '>=0.1.0'
 
 dependency_overrides:
 
