--- a/app_prefs/pubspec.yaml
+++ b/app_prefs/pubspec.yaml
@@ -40,6 +40,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   dev_test:
+  tekartik_app_lints_flutter:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_lints
+    version: '>=0.1.0'
 
 dependency_overrides:
 
