--- a/app_sembast/pubspec.yaml
+++ b/app_sembast/pubspec.yaml
@@ -20,6 +20,12 @@ dependencies:
       ref: null_safety
       path: app_sqflite
     version: '>=0.5.0'
+  tekartik_app_lints_flutter:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_lints
+    version: '>=0.1.0'
 
 dev_dependencies:
   flutter_test:
