--- a/app_sqflite/pubspec.yaml
+++ b/app_sqflite/pubspec.yaml
@@ -18,6 +18,12 @@ dev_dependencies:
     sdk: flutter
   pedantic:
   process_run:
+  tekartik_app_lints_flutter:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_lints
+    version: '>=0.1.0'
 
 dependency_overrides:
 
