--- a/test_app/pubspec.yaml
+++ b/test_app/pubspec.yaml
@@ -65,7 +65,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  tekartik_app_lints_flutter:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_lints
+    version: '>=0.1.0'
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
