--- a/app_lints/pubspec.yaml
+++ b/app_lints/pubspec.yaml
@@ -1,19 +1,20 @@
 name: tekartik_app_lints_flutter
-description: A starting point for Dart libraries or applications.
-version: 0.1.0
+description: Tekartik flutter lints
+version: 0.1.1
 publish_to: none
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  tekartik_common_utils:
-    git:
-      url: git://github.com/tekartik/common_utils.dart
-      ref: null_safety
-    version: '>=0.11.1'
   flutter_lints:
 
 dev_dependencies:
   test: ^1.16.0
   pedantic:
+  tekartik_lints:
+    git:
+      url: git://github.com/tekartik/common.dart
+      ref: null_safety
+      path: packages/lints
+    version: '>=0.1.0'
