fix: lints include

--- a/app_firebase_firestore/pubspec.yaml
+++ b/app_firebase_firestore/pubspec.yaml
@@ -30,11 +30,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   process_run: '>=0.10.3'
-  tekartik_app_lints_flutter:
+  tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/app_flutter_utils.dart
+      url: git://github.com/tekartik/common_flutter.dart
       ref: null_safety
-      path: app_lints
+      path: packages/lints_flutter
     version: '>=0.1.0'
 
 dependency_overrides:
