--- a/app_platform/pubspec.yaml
+++ b/app_platform/pubspec.yaml
@@ -25,11 +25,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   process_run:
-  tekartik_app_lints_flutter:
+  tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/app_flutter_utils.dart
+      url: git://github.com/tekartik/common_flutter.dart
       ref: null_safety
-      path: app_lints
+      path: packages/lints_flutter
     version: '>=0.1.0'
 
 dependency_overrides:
