--- a/app_rx_utils/pubspec.yaml
+++ b/app_rx_utils/pubspec.yaml
@@ -16,11 +16,11 @@ dev_dependencies:
     sdk: flutter
   process_run:
   pedantic:
-  tekartik_app_lints_flutter:
+  tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/app_flutter_utils.dart
+      url: git://github.com/tekartik/common_flutter.dart
       ref: null_safety
-      path: app_lints
+      path: packages/lints_flutter
     version: '>=0.1.0'
 
 dependency_overrides:
