--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -24,10 +24,10 @@ dev_dependencies:
   test:
   dev_test:
   pedantic:
-  tekartik_app_lints_flutter:
+  tekartik_lints:
     git:
-      url: git://github.com/tekartik/app_flutter_utils.dart
+      url: git://github.com/tekartik/common.dart
       ref: null_safety
-      path: app_lints
+      path: packages/lints
     version: '>=0.1.0'
 
