--- a/example/app_plugin_test_app_lib/pubspec.yaml
+++ b/example/app_plugin_test_app_lib/pubspec.yaml
@@ -1,24 +1,40 @@
-name: tekartik_app_flutter_plugin
-description: Flutter plugin with platform features 
-version: 0.3.0
+name: tekartik_app_plugin_test_app_lib
+description: App plugin test app lib
+version: 0.0.1
 publish_to: none
 
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
+  tekartik_test_menu_flutter:
+    git:
+      url: git://github.com/tekartik/test_menu_flutter
+      ref: null_safety
+      path: test_menu_flutter
+    version: '>=0.2.3'
   tekartik_common_utils:
     git:
       url: git://github.com/tekartik/common_utils.dart
       ref: null_safety
-    version: '>=0.10.5'
-
+    version: '>=0.2.3'
+  tekartik_app_platform:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_platform
+    version: '>=0.1.0'
+  tekartik_app_flutter_plugin:
+    git:
+      url: git://github.com/tekartik/app_flutter_utils.dart
+      ref: null_safety
+      path: app_plugin
+    version: '>=0.1.0'
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  process_run:
   tekartik_lints_flutter:
     git:
       url: git://github.com/tekartik/common_flutter.dart
@@ -27,25 +43,16 @@ dev_dependencies:
     version: '>=0.1.0'
 
 dependency_overrides:
+  tekartik_app_flutter_plugin:
+    path: ../../app_plugin
 
 
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The androidPackage and pluginClass identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
-  plugin:
-    androidPackage: com.tekartik.tekartik_app_flutter_plugin
-    pluginClass: TekartikAppFlutterPlugin
 
-  # To add assets to your plugin package, add an assets section, like this:
+  # To add assets to your package, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
@@ -53,7 +60,7 @@ flutter:
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
-  # To add custom fonts to your plugin package, add a fonts section here,
+  # To add custom fonts to your package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
