--- a/app_bloc/pubspec.yaml
+++ b/app_bloc/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
   tekartik_app_bloc:
     git:
-      url: git://github.com/tekartik/app_common_utils.dart
-      ref: null_safety
+      url: https://github.com/tekartik/app_common_utils.dart
+      ref: dart2_3
       path: app_bloc
     version: '>=0.1.0'
 
@@ -23,8 +23,8 @@ dev_dependencies:
   dev_test: '>=0.13.3+11'
   tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/common_flutter.dart
-      ref: null_safety
+      url: https://github.com/tekartik/common_flutter.dart
+      ref: dart2_3
       path: packages/lints_flutter
     version: '>=0.1.0'
 dependency_overrides:
