--- a/app_emit_builder/pubspec.yaml
+++ b/app_emit_builder/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
   tekartik_app_emit:
     git:
-      url: git://github.com/tekartik/app_common_utils.dart
-      ref: null_safety
+      url: https://github.com/tekartik/app_common_utils.dart
+      ref: dart2_3
       path: app_emit
     version: '>=0.1.2'
 
@@ -22,8 +22,8 @@ dev_dependencies:
   process_run:
   tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/common_flutter.dart
-      ref: null_safety
+      url: https://github.com/tekartik/common_flutter.dart
+      ref: dart2_3
       path: packages/lints_flutter
     version: '>=0.1.0'
 dependency_overrides:
