--- a/app_firebase_auth/pubspec.yaml
+++ b/app_firebase_auth/pubspec.yaml
@@ -11,20 +11,20 @@ dependencies:
     sdk: flutter
   tekartik_app_flutter_firebase:
     git:
-      url: git://github.com/tekartik/app_flutter_utils.dart
+      url: https://github.com/tekartik/app_flutter_utils.dart
       path: app_firebase
-      ref: null_safety
+      ref: dart2_3
   tekartik_firebase_auth_browser:
     git:
-      url: git://github.com/tekartik/firebase_auth.dart
+      url: https://github.com/tekartik/firebase_auth.dart
       path: auth_browser
-      ref: null_safety
+      ref: dart2_3
     version: '>=0.7.0'
   tekartik_firebase_auth_flutter:
     git:
-      url: git://github.com/tekartik/firebase_flutter
+      url: https://github.com/tekartik/firebase_flutter
       path: auth_flutter
-      ref: null_safety
+      ref: dart2_3
     version: '>=0.7.0'
 dev_dependencies:
   pedantic:
@@ -33,8 +33,8 @@ dev_dependencies:
   process_run: '>=0.10.3'
   tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/common_flutter.dart
-      ref: null_safety
+      url: https://github.com/tekartik/common_flutter.dart
+      ref: dart2_3
       path: packages/lints_flutter
     version: '>=0.1.0'
 dependency_overrides:
