--- a/app_plugin/pubspec.yaml
+++ b/app_plugin/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
   tekartik_common_utils:
     git:
-      url: git://github.com/tekartik/common_utils.dart
-      ref: null_safety
+      url: https://github.com/tekartik/common_utils.dart
+      ref: dart2_3
     version: '>=0.10.5'
 
 dev_dependencies:
@@ -21,8 +21,8 @@ dev_dependencies:
   process_run:
   tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/common_flutter.dart
-      ref: null_safety
+      url: https://github.com/tekartik/common_flutter.dart
+      ref: dart2_3
       path: packages/lints_flutter
     version: '>=0.1.0'
 
