--- a/app_idb/pubspec.yaml
+++ b/app_idb/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
   sqflite: '>=2.0.0+1'
   tekartik_app_flutter_sqflite:
     git:
-      url: git://github.com/tekartik/app_flutter_utils.dart
-      ref: null_safety
+      url: https://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2_3
       path: app_sqflite
     version: '>=0.5.0'
 
@@ -27,8 +27,8 @@ dev_dependencies:
   dev_test:
   tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/common_flutter.dart
-      ref: null_safety
+      url: https://github.com/tekartik/common_flutter.dart
+      ref: dart2_3
       path: packages/lints_flutter
     version: '>=0.1.0'
 
