--- a/app_lints/pubspec.yaml
+++ b/app_lints/pubspec.yaml
@@ -9,8 +9,8 @@ environment:
 dependencies:
   tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/common_flutter.dart
-      ref: null_safety
+      url: https://github.com/tekartik/common_flutter.dart
+      ref: dart2_3
       path: packages/lints_flutter
     version: '>=0.1.0'
 
