--- a/app_navigator/pubspec.yaml
+++ b/app_navigator/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
     sdk: flutter
   tekartik_app_flutter_bloc:
     git:
-      url: git://github.com/tekartik/app_flutter_utils.dart
-      ref: null_safety
+      url: https://github.com/tekartik/app_flutter_utils.dart
+      ref: dart2_3
       path: app_bloc
     version: '>=0.2.2'
   collection: ^1.15.0-nullsafety.4
@@ -23,8 +23,8 @@ dev_dependencies:
   test:
   tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/common_flutter.dart
-      ref: null_safety
+      url: https://github.com/tekartik/common_flutter.dart
+      ref: dart2_3
       path: packages/lints_flutter
     version: '>=0.1.0'
 
