--- a/app_platform/pubspec.yaml
+++ b/app_platform/pubspec.yaml
@@ -12,13 +12,13 @@ dependencies:
   path:
   tekartik_platform_io:
     git:
-      url: git://github.com/tekartik/platform.dart
-      ref: null_safety
+      url: https://github.com/tekartik/platform.dart
+      ref: dart2_3
       path: platform_io
   tekartik_platform_browser:
     git:
-      url: git://github.com/tekartik/platform.dart
-      ref: null_safety
+      url: https://github.com/tekartik/platform.dart
+      ref: dart2_3
       path: platform_browser
 
 dev_dependencies:
@@ -27,8 +27,8 @@ dev_dependencies:
   process_run:
   tekartik_lints_flutter:
     git:
-      url: git://github.com/tekartik/common_flutter.dart
-      ref: null_safety
+      url: https://github.com/tekartik/common_flutter.dart
+      ref: dart2_3
       path: packages/lints_flutter
     version: '>=0.1.0'
 
