--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -11,14 +11,14 @@ dev_dependencies:
   pub_semver:
   tekartik_travis_ci_flutter:
     git:
-      url: git://github.com/tekartik/travis_ci_flutter.dart
-      ref: null_safety
+      url: https://github.com/tekartik/travis_ci_flutter.dart
+      ref: dart2_3
     version: '>=0.1.0'
   process_run: '>=0.10.3'
   tekartik_build_utils:
     git:
-      url: git://github.com/tekartik/build_utils.dart
-      ref: null_safety
+      url: https://github.com/tekartik/build_utils.dart
+      ref: dart2_3
     version: '>=0.7.8'
 
   test:
@@ -26,8 +26,8 @@ dev_dependencies:
   pedantic:
   tekartik_lints:
     git:
-      url: git://github.com/tekartik/common.dart
-      ref: null_safety
+      url: https://github.com/tekartik/common.dart
+      ref: dart2_3
       path: packages/lints
     version: '>=0.1.0'
 
