--- a/example/app_plugin_test_app_lib/pubspec.yaml
+++ b/example/app_plugin_test_app_lib/pubspec.yaml
@@ -45,6 +45,8 @@ dev_dependencies:
 dependency_overrides:
   tekartik_app_flutter_plugin:
     path: ../../app_plugin
+  tekartik_app_platform:
+    path: ../../app_platform
 
 
 flutter:
