--- a/app_sqflite/pubspec.yaml
+++ b/app_sqflite/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   sqflite_common_ffi: '>=2.0.0'
   sqflite_common: '>=2.0.0+1'
   process_run:
-
+  path:
 dev_dependencies:
   flutter_test:
     sdk: flutter
