--- a/app_idb/pubspec.yaml
+++ b/app_idb/pubspec.yaml
@@ -18,12 +18,13 @@ dependencies:
       ref: dart2_3
       path: app_sqflite
     version: '>=0.5.0'
-
+  path:
+  process_run:
+  sembast:
 dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic:
-  process_run:
   dev_test:
   tekartik_lints_flutter:
     git:
