--- a/app_bloc/pubspec.yaml
+++ b/app_bloc/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.4.0
 publish_to: none
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -12,7 +12,7 @@ dependencies:
   tekartik_app_bloc:
     git:
       url: https://github.com/tekartik/app_common_utils.dart
-      ref: dart2_3
+      ref: dart3a
       path: app_bloc
     version: '>=0.1.0'
 
@@ -24,7 +24,7 @@ dev_dependencies:
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
-      ref: dart2_3
+      ref: dart3a
       path: packages/lints_flutter
     version: '>=0.1.0'
 dependency_overrides:
