--- a/app_platform/pubspec.yaml
+++ b/app_platform/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.3.1
 publish_to: none
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -13,12 +13,12 @@ dependencies:
   tekartik_platform_io:
     git:
       url: https://github.com/tekartik/platform.dart
-      ref: dart2_3
+      ref: dart3a
       path: platform_io
   tekartik_platform_browser:
     git:
       url: https://github.com/tekartik/platform.dart
-      ref: dart2_3
+      ref: dart3a
       path: platform_browser
 
 dev_dependencies:
@@ -28,7 +28,7 @@ dev_dependencies:
   tekartik_lints_flutter:
     git:
       url: https://github.com/tekartik/common_flutter.dart
-      ref: dart2_3
+      ref: dart3a
       path: packages/lints_flutter
     version: '>=0.1.0'
 
