--- a/repo_support/pubspec.yaml
+++ b/repo_support/pubspec.yaml
@@ -4,21 +4,16 @@ version: 0.2.0
 publish_to: none
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dev_dependencies:
   path:
   pub_semver:
-  tekartik_travis_ci_flutter:
-    git:
-      url: https://github.com/tekartik/travis_ci_flutter.dart
-      ref: dart2_3
-    version: '>=0.1.0'
   process_run: '>=0.10.3'
   tekartik_build_utils:
     git:
       url: https://github.com/tekartik/build_utils.dart
-      ref: dart2_3
+      ref: dart3a
     version: '>=0.7.8'
 
   test:
@@ -26,6 +21,6 @@ dev_dependencies:
   tekartik_lints:
     git:
       url: https://github.com/tekartik/common.dart
-      ref: dart2_3
+      ref: dart3a
       path: packages/lints
     version: '>=0.1.0'
