add common app project for various flutter raw utilities

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -149,6 +149,11 @@ updates:
     schedule:
       interval: "monthly"
 
+  - package-ecosystem: "pub"
+    directory: "app_common"
+    schedule:
+      interval: "monthly"
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
