--- a/app_sqflite/pubspec.yaml
+++ b/app_sqflite/pubspec.yaml
@@ -1,6 +1,6 @@
 name: tekartik_app_flutter_sqflite
 description: Sqflite common initialization for flutter
-version: 0.6.0
+version: 0.6.1
 publish_to: none
 
 environment:
@@ -9,10 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: '>=2.2.8-0'
-  sqflite_common_ffi_web:
-  sqflite_common_ffi: '>=2.2.5-0'
-  sqflite_common: '>=2.0.0+1'
+  sqflite: '>=2.3.0'
+  sqflite_common_ffi_web: '>=0.4.2'
+  sqflite_common_ffi: '>=2.3.0+4'
+  sqflite_common: '>=2.5.0+2'
   process_run:
   path:
 dev_dependencies:
